--- a/code.html
+++ b/code.html
@@ -12,3 +12,5 @@
 <body>
     <div class="clubs-bg"></div>
     <nav class="glass-nav">
+	<div class="logo"><i class="fas fa-users"></i> ClubHub</div>
+        <ul>
