--- a/code.html
+++ b/code.html
@@ -14,3 +14,12 @@
     <nav class="glass-nav">
 	<div class="logo"><i class="fas fa-users"></i> ClubHub</div>
         <ul>
+	    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="#clubs"><i class="fas fa-robot"></i> Clubs</a></li>
+            <li><a href="events.html"><i class="fas fa-calendar-alt"></i> Events</a></li>
+            <li><a href="#about"><i class="fas fa-info-circle"></i>About us</a></li>
+        </ul>
+	<button class="mobile-menu-button">
+            <i class="fas fa-bars"></i>
+        </button>
+    </nav>
