head of the webpage

--- a/code.html
+++ b/code.html
@@ -23,3 +23,6 @@
             <i class="fas fa-bars"></i>
         </button>
     </nav>
+    <header class="club-header">
+        <div class="header-content">
+            <h1>Music Club <span class="emoji">🎶</span></h1
