part of head bar

--- a/code.html
+++ b/code.html
@@ -25,4 +25,4 @@
     </nav>
     <header class="club-header">
         <div class="header-content">
-            <h1>Music Club <span class="emoji">🎶</span></h1
+		<h1>Music Club <span class="emoji">🎶</span></h1>
