paragrapgh and buttons added to the head

--- a/code.html
+++ b/code.html
@@ -26,3 +26,9 @@
     <header class="club-header">
         <div class="header-content">
 		<h1>Music Club <span class="emoji">🎶</span></h1>
+		<p class="tagline">Where melodies meet souls and rhythms move hearts</p>
+            <div class="header-actions">
+                <button class="join-btn" id="scroll-to-join">Join the Club</button>
+                <button class="event-btn" id="scroll-to-events">Upcoming Events</button>
+            </div>
+        </div>
