--- a/code.html
+++ b/code.html
@@ -32,3 +32,7 @@
                 <button class="event-btn" id="scroll-to-events">Upcoming Events</button>
             </div>
         </div>
+	<div class="header-image">
+            <img src="assets/music-banner.jpg" alt="Music Club members performing">
+        </div>
+    </header>
