start of club-container with class

--- a/code.html
+++ b/code.html
@@ -36,3 +36,7 @@
             <img src="assets/music-banner.jpg" alt="Music Club members performing">
         </div>
     </header>
+
+
+
+    <main class="club-container">
