addition of section header and divider

--- a/code.html
+++ b/code.html
@@ -40,3 +40,8 @@
 
 
     <main class="club-container">
+	    <section class="about-section">
+            <div class="section-header">
+                <h2>About Our Club</h2>
+                <div class="divider"></div>
+            </div>
