content and images are aaded

--- a/code.html
+++ b/code.html
@@ -45,3 +45,10 @@
                 <h2>About Our Club</h2>
                 <div class="divider"></div>
             </div>
+	    <div class="about-content">
+                <div class="about-image">
+                    <img src="assets/jam-session.jpg" alt="Music club members jamming">
+                </div>
+                <div class="about-text">
+                    <p>The Music Club is a vibrant community of music lovers, performers, and creators. Whether you're
+		    into singing, playing instruments, or producing beats, there's a place here for everyone.</p>
