highlight added on jam sessions

--- a/code.html
+++ b/code.html
@@ -52,3 +52,7 @@
                 <div class="about-text">
                     <p>The Music Club is a vibrant community of music lovers, performers, and creators. Whether you're
 		    into singing, playing instruments, or producing beats, there's a place here for everyone.</p>
+		    <div class="highlights">
+                        <div class="highlight-item">
+                            <i class="fas fa-guitar"></i>
+                            <span>Jam Sessions</span>
