highlight is added for open mic section

--- a/code.html
+++ b/code.html
@@ -56,3 +56,9 @@
                         <div class="highlight-item">
                             <i class="fas fa-guitar"></i>
                             <span>Jam Sessions</span>
+			    </div>
+
+			    <div class="highlight-item">
+                            <i class="fas fa-microphone"></i>
+                            <span>Open Mics</span>
+                        </div>
