--- a/code.html
+++ b/code.html
@@ -62,3 +62,7 @@
                             <i class="fas fa-microphone"></i>
                             <span>Open Mics</span>
                         </div>
+			<div class="highlight-item">
+                            <i class="fas fa-headphones"></i>
+                            <span>DJ Nights</span>
+                        </div>
