--- a/code.html
+++ b/code.html
@@ -66,3 +66,7 @@
                             <i class="fas fa-headphones"></i>
                             <span>DJ Nights</span>
                         </div>
+			<div class="highlight-item">
+                            <i class="fas fa-users"></i>
+                            <span>Collaborations</span>
+                        </div>
