--- a/code.html
+++ b/code.html
@@ -70,3 +70,7 @@
                             <i class="fas fa-users"></i>
                             <span>Collaborations</span>
                         </div>
+		    </div>
+                </div>
+            </div>
+        </section>
