Upcoming events section

--- a/code.html
+++ b/code.html
@@ -74,3 +74,10 @@
                 </div>
             </div>
         </section>
+
+
+	<section class="events-section" id="events-upcoming">
+            <div class="section-header">
+                <h2>Upcoming Events <span class="emoji">🎤</span></h2>
+                <div class="divider"></div>
+            </div>
