First event details

--- a/code.html
+++ b/code.html
@@ -81,3 +81,18 @@
                 <h2>Upcoming Events <span class="emoji">🎤</span></h2>
                 <div class="divider"></div>
             </div>
+	    <div class="events-grid">
+                <div class="event-card featured">
+                    <div class="event-date">
+                        <span class="day">7</span>
+                        <span class="month">october</span>
+                    </div>
+                    <div class="event-details">
+                        <h3>Acoustic Night</h3>
+                        <p class="event-meta">
+                            <i class="fas fa-clock"></i> 6:00 PM – 9:00 PM
+                            <i class="fas fa-map-marker-alt"></i> Open Amphitheater
+                        </p>
+                        <p>A chill evening with unplugged performances by our top vocalists and guitarists.</p>
+                        <button class="register-btn">Register Now</button>
+                    </div>
