--- a/code.html
+++ b/code.html
@@ -96,3 +96,17 @@
                         <p>A chill evening with unplugged performances by our top vocalists and guitarists.</p>
                         <button class="register-btn">Register Now</button>
                     </div>
+		</div>
+                <div class="event-card">
+                    <div class="event-date">
+                        <span class="day">02</span>
+                        <span class="month">november</span>
+                    </div>
+                    <div class="event-details">
+                        <h3>Beat Battle</h3>
+                        <p class="event-meta">
+                            <i class="fas fa-clock"></i> 5:00 PM – 8:00 PM
+                            <i class="fas fa-map-marker-alt"></i> Auditorium Hall B
+                        </p>
+                        <p>Compete or vibe with live DJ sets and music production challenges.</p>
+                        <button class="register-btn">Register Now</button>
