end of the event section

--- a/code.html
+++ b/code.html
@@ -110,3 +110,11 @@
                         </p>
                         <p>Compete or vibe with live DJ sets and music production challenges.</p>
                         <button class="register-btn">Register Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
