--- a/code.html
+++ b/code.html
@@ -115,6 +115,12 @@
             </div>
         </section>
 
+        <section class="past-events">
+            <div class="section-header">
+                <h2>Past Events <span class="emoji">🎼</span></h2>
+                <div class="divider"></div>
+            </div>
+
 
 
 
