--- a/code.html
+++ b/code.html
@@ -120,6 +120,14 @@
                 <h2>Past Events <span class="emoji">🎼</span></h2>
                 <div class="divider"></div>
             </div>
+            <div class="event-gallery">
+                <div class="gallery-item">
+                    <img src="assets/event.jpg" alt="Battle of Bands">
+                    <div class="gallery-overlay">
+                        <h3>Battle of Bands</h3>
+                        <p>April 10, 2025</p>
+                    </div>
+                </div>
 
 
 
