completion of the past event section

--- a/code.html
+++ b/code.html
@@ -128,6 +128,24 @@
                         <p>April 10, 2025</p>
                     </div>
                 </div>
+                <div class="gallery-item">
+                    <img src="assets/event1.jpg" alt="Rhythm Revival">
+                    <div class="gallery-overlay">
+                        <h3>Rhythm Revival</h3>
+                        <p>March 1, 2025</p>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/event3.jpg" alt="Winter Jam">
+                    <div class="gallery-overlay">
+                        <h3>Winter Jam</h3>
+                        <p>December 15, 2024</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+	//past event section completed
+
 
 
 
