start of the testimonial section

--- a/code.html
+++ b/code.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </section>
-
+//start of past events
         <section class="past-events">
             <div class="section-header">
                 <h2>Past Events <span class="emoji">🎼</span></h2>
@@ -144,7 +144,13 @@
                 </div>
             </div>
         </section>
-	//past event section completed
+	//start of testimonial section
+
+        <section class="testimonials">
+            <div class="section-header">
+                <h2>What Members Say</h2>
+                <div class="divider"></div>
+            </div>
 
 
 
