testimonial section is added

--- a/code.html
+++ b/code.html
@@ -151,6 +151,21 @@
                 <h2>What Members Say</h2>
                 <div class="divider"></div>
             </div>
+            <div class="testimonial-carousel">
+                <div class="testimonial-card">
+                    <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
+                    <p class="testimonial-text">"Joining the Music Club transformed my college experience. I've made
+                        lifelong friends and grown so much as a musician."</p>
+                    <div class="testimonial-author">
+                        <img src="assets/testimonial1.jpg" alt="Aruna.">
+                        <div>
+                            <h4>Aruna.</h4>
+                            <p>Vocalist, Class of 2024</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
