club coordinate details

--- a/code.html
+++ b/code.html
@@ -167,6 +167,21 @@
             </div>
         </section>
 
+        <section class="club-details">
+            <div class="section-header">
+                <h2>Club Coordinator <span class="emoji">🎧</span></h2>
+                <div class="divider"></div>
+            </div>
+            <div class="details-content coordinator-center">
+                <div class="coordinator-card">
+                    <img src="assets/member.webp" alt="Dr. shradha" class="coordinator-photo">
+                    <h3>Club Coordinator</h3>
+                    <p><strong>Dr. Shradha</strong><br>Assistant Professor, Department of Music<br>Email:
+                        asha.menon@university.edu</p>
+                </div>
+            </div>
+        </section>
+
 
 
 
