club member section is added

--- a/code.html
+++ b/code.html
@@ -182,6 +182,12 @@
             </div>
         </section>
 
+        <section class="club-members">
+            <div class="section-header">
+                <h2>Club Members</h2>
+                <div class="divider"></div>
+            </div>
+
 
 
 
