first member's details are added

--- a/code.html
+++ b/code.html
@@ -188,6 +188,13 @@
                 <div class="divider"></div>
             </div>
 
+            <div class="members-grid">
+                <div class="member-card">
+                    <div class="member-image"><img src="assets/member1.webp" alt="Ujwala."></div>
+                    <h3>Ujwala.</h3>
+                    <div class="position">Vocalist</div>
+                </div>
+
 
 
 
