second member's detail is added

--- a/code.html
+++ b/code.html
@@ -195,6 +195,12 @@
                     <div class="position">Vocalist</div>
                 </div>
 
+                <div class="member-card">
+                    <div class="member-image"><img src="assets/member4.jpg" alt="Chaman."></div>
+                    <h3>chaman.</h3>
+                    <div class="position">Guitarist</div>
+                </div>
+
 
 
 
