third member's details added

--- a/code.html
+++ b/code.html
@@ -201,6 +201,12 @@
                     <div class="position">Guitarist</div>
                 </div>
 
+                <div class="member-card">
+                    <div class="member-image"><img src="assets/member2.webp" alt="Ishika."></div>
+                    <h3>Ishika.</h3>
+                    <div class="position">DJ & Music Producer</div>
+                </div>
+
 
 
 
