fourth member's detail added

--- a/code.html
+++ b/code.html
@@ -207,6 +207,12 @@
                     <div class="position">DJ & Music Producer</div>
                 </div>
 
+                <div class="member-card">
+                    <div class="member-image"><img src="assets/member5.jpeg" alt="Tarun."></div>
+                    <h3>Tarun.</h3>
+                    <div class="position">Percussionist</div>
+                </div>
+
 
 
 
