form section is added with name section

--- a/code.html
+++ b/code.html
@@ -222,6 +222,18 @@
         </section>
 
 
+        <section class="join-section" id="join">
+            <div class="section-header">
+                <h2>Join the Music Club</h2>
+                <div class="divider"></div>
+            </div>
+            <form class="join-form">
+                <div class="form-group">
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+
+
 
 
 
