--- a/code.html
+++ b/code.html
@@ -246,6 +246,16 @@
                         <option value="4">4th Year</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="interest">Musical Interest</label>
+                    <input type="text" id="interest" name="interest" placeholder="e.g. Guitar, Singing, DJ..." required>
+                </div>
+                <button type="submit" class="join-btn">Join Club</button>
+            </form>
+        </section>
+
+
+    </main>
 
 
 
