footer section is added

--- a/code.html
+++ b/code.html
@@ -257,6 +257,18 @@
 
     </main>
 
+    <footer class="club-footer">
+        <div class="footer-content">
+            <div class="footer-about">
+                <h3>Music Club</h3>
+                <p>Part of ClubVerse at University</p>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-spotify"></i></a>
+                </div>
+            </div>
+
 
 
 
