--- a/code.html
+++ b/code.html
@@ -268,6 +268,23 @@
                     <a href="#"><i class="fab fa-spotify"></i></a>
                 </div>
             </div>
+            <div class="footer-contact">
+                <h3>Contact Us</h3>
+                <p><i class="fas fa-envelope"></i> music@clubHub.edu</p>
+                <p><i class="fas fa-phone"></i> (123) 456-7890</p>
+                <p><i class="fas fa-map-marker-alt"></i> Music Hall, Room A-107</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 ClubVerse. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="main.js"></script>
+</body>
+
+</html>
+
 
 
 
