--- a/code.html
+++ b/code.html
@@ -119,7 +119,8 @@
             <div class="section-header">
                 <h2>Past Events <span class="emoji">🎼</span></h2>
                 <div class="divider"></div>
-            </div>
+/name added?
+	    </div>
             <div class="event-gallery">
                 <div class="gallery-item">
                     <img src="assets/event.jpg" alt="Battle of Bands">
